<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Universal Consulting Links Ghana 2019.
  -->
<layout>
    <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ripple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="1dp"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleColor="#000000"
        app:mrl_rippleDimension="10dp"
        app:mrl_rippleDuration="150"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleRoundedCorners="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_large"
            android:background="@drawable/background_round_white"
            android:padding="20dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="@dimen/spacing_small"
                android:contentDescription="@string/content_desc_community_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:riv_corner_radius="5dp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/photo"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/varelaround"
                        android:text="@string/label_community_name"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/ts_extra_small"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/community_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textAllCaps="true"
                        android:textColor="@color/md_grey_900"
                        android:textSize="@dimen/ts"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/varelaround"
                        android:text="@string/label_geographical"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/ts_extra_small"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/geographical_district"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textAllCaps="true"
                        android:textColor="@color/md_grey_900"
                        android:textSize="@dimen/ts"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/varelaround"
                        android:text="@string/label_accessibility"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/ts_extra_small"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/accessibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textAllCaps="true"
                        android:textColor="@color/md_grey_900"
                        android:textSize="@dimen/ts"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/varelaround"
                        android:text="@string/label_distance_ecom"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/ts_extra_small"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/distance_ecom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textAllCaps="true"
                        android:textColor="@color/md_grey_900"
                        android:textSize="@dimen/ts"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/varelaround"
                        android:text="@string/label_license_date"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/ts_extra_small"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/license_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ibmplexsans_regular"
                        android:textAllCaps="true"
                        android:textColor="@color/md_grey_900"
                        android:textSize="@dimen/ts"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/request_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/background_button"
                        android:fontFamily="@font/varelaround"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/label_view_on_map"
                        android:textColor="@color/md_white_1000"
                        android:textSize="@dimen/ts_extra_small"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>

        </RelativeLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
</layout>

